--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 sudo: false
 language: ruby
 rvm:
-  - 2.5.0
-before_install: gem install bundler -v 1.15.1
+  - 2.4.0
+before_install: gem install bundler -v 1.16.1
+script: bundle exec rspec spec
