--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
-sudo: false
+sudo: true
 language: ruby
 rvm:
   - 2.4.0
-before_install: gem install bundler -v 1.16.1
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get install -y unzip
+  - gem install bundler -v 1.16.1
+  - bash bin/install_protoc.sh
+  - export PATH=$PATH:$HOME/protoc/bin
 script: bundle exec rspec spec
