--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 sudo: true
 language: ruby
 rvm:
-  - 2.4.0
+  - 2.6
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y unzip
-  - gem install bundler -v 1.16.1
-  - bash bin/install_protoc.sh
+  - sudo apt-get install -y libsodium
+  - gem install bundler
   - export PATH=$PATH:$HOME/protoc/bin
 script: bundle exec rspec spec
